--- a/admin.html
+++ b/admin.html
@@ -12,9 +12,7 @@
             <div class="container">
                 <a href="index.html" class="logo">LOGO</a>
                 <nav class="admin-nav">
-                    <a href="admin.html">Dashboard</a>
-                    <a href="admin.html">Submissions</a>
-                    <a href="admin.html">Users</a>
+                    <a href="admin.html">Profile</a>
                 </nav>
                 <div class="flex items-center space-x-4">
                     <div class="admin-user-info">
@@ -67,6 +65,7 @@
             </div>
         </main>
     </div>
+    <script src="utils.js"></script>
     <script src="admin.js"></script>
 </body>
 </html>
