--- a/artist.html
+++ b/artist.html
@@ -15,7 +15,7 @@
                     <a href="index.html">Home</a>
                     <a href="collection.html">Art</a>
                     <a href="submit.html">Submit Artwork</a>
-                    <a href="artist.html">My Dashboard</a>
+                    <a href="artist.html">Profile</a>
                     <a href="#" id="logout-link">Logout</a>
                 </nav>
             </div>
@@ -75,6 +75,7 @@
             </div>
         </footer>
     </div>
+    <script src="utils.js"></script>
     <script src="artist.js"></script>
 </body>
 </html>
