--- a/collection.html
+++ b/collection.html
@@ -110,6 +110,7 @@
             </div>
         </footer>
     </div>
+    <script src="utils.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
