--- a/detail.html
+++ b/detail.html
@@ -69,6 +69,7 @@
             </div>
         </footer>
     </div>
+    <script src="utils.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
