--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indigenous Art Atlas - Home</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,7 +40,7 @@
 
                 <section class="map-section">
                     <h2 class="section-title">Explore On Map</h2>
-                    <div class="map-placeholder">Interactive Map Coming Soon</div>
+                    <div id="map" style="height: 500px; width: 100%; border-radius: 8px;"></div>
                 </section>
 
                 <section>
@@ -69,6 +70,8 @@
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="utils.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
