--- a/login.html
+++ b/login.html
@@ -43,6 +43,7 @@
             <img src="https://picsum.photos/seed/login/800/1000" alt="Indigenous Art" style="width:100%; height:100%; object-fit:cover;">
         </div>
     </div>
+    <script src="utils.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
