--- a/signup.html
+++ b/signup.html
@@ -56,6 +56,7 @@
             </div>
         </div>
     </div>
+    <script src="utils.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
