--- a/submit.html
+++ b/submit.html
@@ -91,6 +91,7 @@
             </div>
         </footer>
     </div>
+    <script src="utils.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
