--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="utils.js"></script>
+    <script src="map.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
